--- a/index.html
+++ b/index.html
@@ -9,41 +9,33 @@
 
     <link rel="stylesheet" href="./style.css" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet" />
 
     <title>Social links profile</title>
   </head>
   <body>
-    <div class="card">
-      <div class="profile">
-        <img src="./assets/images/avatar-jessica.jpeg" alt="" class="profile-pic" />
-        <div class="name-location">
-          <h2 class="name">Jessica Randall</h2>
-          <p class="location">London, United Kingdom</p>
+    <main class="social-links-profile-component">
+      <div class="card">
+        <div class="profile">
+          <img src="./assets/images/avatar-jessica.jpeg" alt="" class="profile-pic" />
+          <div class="name-location">
+            <h2 class="name">Jessica Randall</h2>
+            <p class="location">London, United Kingdom</p>
+          </div>
+
+          <p class="bio">"Front-end developer and avid reader."</p>
         </div>
 
-        <p class="bio">"Front-end developer and avid reader."</p>
+        <div class="links">
+          <div role="button" class="btn-link"><a href="#">Github</a></div>
+          <div role="button" class="btn-link"><a href="#">Frontend Mentor</a></div>
+          <div role="button" class="btn-link"><a href="#">LinkedIn</a></div>
+          <div role="button" class="btn-link"><a href="#">Twitter</a></div>
+          <div role="button" class="btn-link"><a href="#">Instagram</a></div>
+        </div>
       </div>
-
-      <div class="links">
-        <button class="btn-link">
-          <a href="#">Github</a>
-        </button>
-        <button class="btn-link">
-          <a href="#">Frontend Mentor</a>
-        </button>
-        <button class="btn-link">
-          <a href="#">LinkedIn</a>
-        </button>
-        <button class="btn-link">
-          <a href="#">Twitter</a>
-        </button>
-        <button class="btn-link">
-          <a href="#">Instagram</a>
-        </button>
-      </div>
-    </div>
+    </main>
   </body>
 </html>
