--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
         </div>
 
         <div class="links">
-          <div role="button" class="btn-link"><a href="#">Github</a></div>
-          <div role="button" class="btn-link"><a href="#">Frontend Mentor</a></div>
-          <div role="button" class="btn-link"><a href="#">LinkedIn</a></div>
-          <div role="button" class="btn-link"><a href="#">Twitter</a></div>
-          <div role="button" class="btn-link"><a href="#">Instagram</a></div>
+          <a href="#" class="btn-link">Github</a>
+          <a href="#" class="btn-link">Frontend Mentor</a>
+          <a href="#" class="btn-link">LinkedIn</a>
+          <a href="#" class="btn-link">Twitter</a>
+          <a href="#" class="btn-link">Instagram</a>
         </div>
       </div>
     </main>
